# treact-zork

./: .gitignore  LICENSE  README.md  requirements.txt  sources.txt
mcp-client/: pyproject.toml  requirements.txt
mcp-client/src/: client.py  main.py
mcp-client/src/treact_client/: mcp_client.py
mcp-server/: pyproject.toml  requirements.txt
mcp-server/src/: server.py
src/: client.py  mcp_server.py  pyproject.toml  server.py  zork_api.py
treact-client/: .env.example  .gitignore  TREACT_Analysis_Summary.txt  analyze_treact_logs.py  append_treact_results.py  client-template.txt.example  client.toml  client.toml.example  max_scores_analysis.csv  max_scores_summary_stats.csv  pyproject.toml  requirements.txt  strategy_comparison.csv  treact_analysis_results.csv
treact-client/clients/: action-template.txt  action.toml  react-template.txt  react.toml  standard-template.txt  standard.toml  treact-template.txt  treact.toml
treact-client/src/: main.py
treact-client/src/treact_client/: __init__.py  ai_mode.py  ai_model_response.py  client_toml.py  csv_logger.py  exceptions.py  load_env.py  log.py  logger.py  mcp_client.py  prompt_template.py  state.py  tool_call.py  utils.py
treact-server/: pyproject.toml  requirements.txt
treact-server/src/: main.py
treact-server/src/treact_server/: __init__.py  mcp_server.py
zork-tool/: pyproject.toml  requirements.txt
zork-tool/games/: test.py
zork-tool/src/: key_manager.py  main.py  server.py  zork_api.py  zork_dict.py
zork-tool/src/zork_tool/: __init__.py  key_manager.py  zork_server.py
