[project]
name = "mcp-client"
version = "0.1.0"
description = ""
authors = [
    {name = "Kasidit Sarnrak",email = "otto.ksarnrak@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp (>=1.15.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
