[project]
name = "mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.13",
    "httpx==0.28.1",
    "langchain==0.3.26",
    "langchain-chroma==0.2.4",
    "langchain-community>=0.3.27",
    "langchain-core==0.3.67",
    "langchain-google-genai==2.1.5",
    "langchain-huggingface==0.3.0",
    "langchain-mcp-adapters==0.1.7",
    "langchain-ollama>=0.3.3",
    "langgraph>=0.6.4",
    "mcp==1.9.4",
    "pandas==2.3.0",
    "pydantic==2.11.7",
    "python-dotenv==1.1.0",
    "sentence-transformers>=5.1.0",
    "typing-extensions==4.12.2",
    "uvicorn==0.34.3",
]
