[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.10.0",
    "fastapi==0.116.1",
    "httpx==0.28.1",
    "idna==3.10",
    "langchain>=0.3.26",
    "langchain-google-genai>=2.1.9",
    "langchain-mcp-adapters>=0.1.7",
    "langgraph>=0.4.8",
    "mcp==1.9.4",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "python-dotenv==1.1.0",
    "sentence-transformers>=5.1.0",
    "sniffio==1.3.1",
    "starlette==0.47.2",
    "typing-extensions==4.12.2",
    "typing-inspection==0.4.1",
    "uvicorn==0.34.3",
]
