[project]
name = "treact-client"
version = "0.1.0"
description = ""
authors = [
    {name = "Kasidit Sarnrak",email = "otto.ksarnrak@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "mcp (>=1.15.0,<2.0.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "langchain-google-genai (>=2.1.12,<3.0.0)",
    "langgraph (>=0.6.8,<0.7.0)",
    "pydantic (>=2.11.9,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "langchain-ollama (>=0.3.9,<0.4.0)",
    "sentence-transformers (>=5.1.1,<6.0.0)",
    "langchain-mcp-adapters (>=0.1.10,<0.2.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "requests (>=2.32.5,<3.0.0)"
]

[project.scripts]
standard-client = "main:standard_client"
react-client = "main:react_client"
treact-client = "main:treact_client"
action-client = "main:action_client"
mcp-client = "main:custom_client"

[tool.poetry]
packages = [
    {include = "treact_client", from = "src"},
    {include = "main.py", from = "src"}
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "mypy (>=1.18.2,<2.0.0)",
    "black (>=25.9.0,<26.0.0)",
    "types-tqdm (>=4.67.0.20250809,<5.0.0.0)",
]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
files = ["./src/treact_client/", "./src/main.py"]
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "mcp",
    "mcp.*",
    "langgraph",
    "langgraph.*",
    "torch",
    "torch.*",
    "transformers",
    "transformers.*",
    "sentence_transformers",
    "sentence_transformers.*",
    "langchain",
    "langchain.*",
    "langchain_google_genai",
    "langchain_google_genai.*",
    "langchain_core",
    "langchain_core.*",
    "langchain_ollama",
    "langchain_ollama.*",
    "langchain_mcp_adapters",
    "langchain_mcp_adapters.*"
]
ignore_missing_imports = true
follow_imports = "skip"
