[project]
name = "treact-server"
version = "0.1.0"
description = ""
authors = [
    {name = "Kasidit Sarnrak",email = "otto.ksarnrak@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "mcp (>=1.15.0,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
]

[project.scripts]
treact-server = "main:main"

[tool.poetry]
packages = [
    {include = "treact_server", from = "src"},
    {include = "main.py", from = "src"}
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "mypy (>=1.18.2,<2.0.0)",
    "black (>=25.9.0,<26.0.0)"
]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
files = ["./src/treact_server/", "./src/main.py"]
strict = true
no_site_packages = true
