[project]
name = "zork-tool"
version = "0.1.0"
description = ""
authors = [
    {name = "Kasidit Sarnrak",email = "otto.ksarnrak@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "uvicorn (>=0.37.0,<0.38.0)",
    "pydantic (>=2.11.9,<3.0.0)",
    "fastapi (>=0.118.0,<0.119.0)"
]

[project.scripts]
zork-server = "main:main"

[tool.poetry]
packages = [
    {include = "zork_tool", from = "src"},
    {include = "main.py", from = "src"}
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "mypy (>=1.18.2,<2.0.0)",
    "black (>=25.9.0,<26.0.0)",
]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
files = ["./src/zork_tool/", "./src/main.py"]
strict = true
no_site_packages = true